syntax = "proto3";

option go_package = "./internal/api";

package gerencia;

service Gerencia {
    // Gravacao requests
    rpc Match (MatchReq) returns (MatchRes) {} // TODO streaming de informação de placa e o gerencia processa tudo?

    // Gerencia Client requests
    rpc Migrate (MigrateReq) returns (MigrateRes) {}

    // Acontecimentos
    // manda a lista para o gerencia
    // gerencia cadastra no banco de dados
    // manda sinal de atualizacao para todos os gravacao servers

    rpc CreateServidorGravacao (CreateServidorGravacaoReq) returns (CreateServidorGravacaoRes) {}
    rpc ReadServidorGravacao (ReadServidorGravacaoReq) returns (ReadServidorGravacaoRes) {}
    rpc UpdateServidorGravacao (UpdateServidorGravacaoReq) returns (UpdateServidorGravacaoRes) {}
    rpc DeleteServidorGravacao (DeleteServidorGravacaoReq) returns (DeleteServidorGravacaoRes) {}

    rpc CreateCamera (CreateCameraReq) returns (CreateCameraRes) {}
    rpc ReadCamera (ReadCameraReq) returns (ReadCameraRes) {}
    rpc UpdateCamera (UpdateCameraReq) returns (UpdateCameraRes) {}
    rpc DeleteCamera (DeleteCameraReq) returns (DeleteCameraRes) {}

    rpc CreateProcesso (CreateProcessoReq) returns (CreateProcessoRes) {}
    rpc ReadProcesso (ReadProcessoReq) returns (ReadProcessoRes) {}
    rpc UpdateProcesso (UpdateProcessoReq) returns (UpdateProcessoRes) {}
    rpc DeleteProcesso (DeleteProcessoReq) returns (DeleteProcessoRes) {}
}

message MatchReq{
    string registro_id = 1;
    string placa_id = 2;
}

message MatchRes{}

message MigrateReq{
    int32 versao = 1;
}

message MigrateRes{}


message CreateServidorGravacaoReq {
    string endereco_ip = 1;
    int32 porta = 2;
    string host = 3;
}

message CreateServidorGravacaoRes {
    string servidor_gravacao_id = 1;
}

message ReadServidorGravacaoReq{}

message ReadServidorGravacaoRes{}

message UpdateServidorGravacaoReq{}

message UpdateServidorGravacaoRes{}

message DeleteServidorGravacaoReq{
    string servidor_gravacao_id = 1;
}

message DeleteServidorGravacaoRes{}




message CreateCameraReq{
    string descricao = 1;
    string endereco_ip = 2;
    int32 porta = 3;
    int32 canal = 4;
    string usuario = 5;
    string senha = 6;
    string geolocalizacao = 7;
}

message CreateCameraRes{
    string camera_id = 1;
}

message ReadCameraReq{}

message ReadCameraRes{}

message UpdateCameraReq{}

message UpdateCameraRes{}

message DeleteCameraReq{
    string camera_id = 1;
}

message DeleteCameraRes{}




message CreateProcessoReq{
    string servidor_gravacao_id = 1;
    string camera_id = 2;
    int32 processador = 3;
    int32 adaptador = 4;
    bool execucao = 5;
}

message CreateProcessoRes{
    string processo_id = 1;
}

message ReadProcessoReq{}

message ReadProcessoRes{}

message UpdateProcessoReq{}

message UpdateProcessoRes{}

message DeleteProcessoReq{
    string processo_id = 1;
}

message DeleteProcessoRes{}